Preload flag images to prevent flicker

--- a/public/styles/header.scss
+++ b/public/styles/header.scss
@@ -18,16 +18,6 @@ $mobile-breakpoint: 1020px;
         }
       }
       margin-right: 12px;
-
-      &.united-kingdom {
-        background-image: url(/img/iconFlagUnitedKingdom.png);
-      }
-      &.mexico {
-        background-image: url(/img/iconFlagMexico.png);
-      }
-      &.china {
-        background-image: url(/img/iconFlagChina.png);
-      }
     }
 
     color: white;
